@@ -8,6 +8,7 @@
 - Add Image viewer for persons
 - Add TMDb Helper support to OSD button
 - Re-arrange some lists
+- Add new discover calls for cast features
 
 0.9.41
 - Updates to infoline label handling
